Fix contact on mobile and stopped infinite redirect in solutions

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -30,3 +30,27 @@
     font-size: 30px;
   }
 }
+
+@media only screen and (max-width: 767px)  {
+  .contact-container {
+      flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .contact-container {
+    flex-direction: row;
+  }
+}
+
+@media only screen and (max-width: 767px)  {
+  .contact-hidden-sm {
+      display: none;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .contact-hidden-sm {
+    display: flex;
+  }
+}
